SSCS-11000 Lists Refactor